# cmdfilter

./: .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml
Tests/: conftest.py  test_helpers.py  test_match.py
bench/: benchmark_match_many.py
cmdfilter/: __init__.py  checkers.py  classes.py  helpers.py  inc.py  presets.py  selector.py  typing_utils.py  utils.py
docs/: release.md
